--- a/FFMpeg_video_converter/Views/Home/Main.cshtml
+++ b/FFMpeg_video_converter/Views/Home/Main.cshtml
@@ -4,91 +4,140 @@
 }
 
 <body lang="en">
-    @*<form asp-action="AddFile" asp-controller="Home" method="post" enctype="multipart/form-data">
-            <label>Choose file to upload </label>
-            <input type="file" value="Upload" name="file" /><br>
-            <input type="submit" value="Submit" />
-        </form>*@
 
     <link href="~/css/main.css" rel="stylesheet" asp-append-version="true">
 
-    @*@<div class="wrapper">
-            <div class="board">
-                <div class="info-zone">
-                    <label>FFMpeg file converter</label><br>
-                    <label>Simple student project with usage of FFmpeg library to convert video files</label><br>
-                    <label>Provides possibility to convert video files to AVI format</label>
-                </div>
+    <div>
+        <div class="layout">
+            <label>FFMpeg video converter</label>
+        </div>
 
+        <div class="board">
+            <div id="upload" style="display: flex; align-items: center">
                 <div class="upload-zone">
-                    <form asp-action="AddFile" asp-controller="Home" method="post" enctype="multipart/form-data">
-                        <label>Choose file to upload </label>
-                        <input type="file" value="Upload" name="file" /><br>
-                        <input type="submit" value="Submit" />
-                    </form>
+                    <img src="~/svg/upload.svg">
+                    <input id="file-input" type="file" name="file" multiple>
+                    <label for="file-input">Choose file</label>
+                    <span>or drop it here</span>
                 </div>
 
-                <div class="confirm-zone">
-
+                <div class="description">
+                    <label>File converter based on FFMpeg lib</label><br>
+                    <label>Affords to convert video to format:</label><br>
+                    <p>
+                        - avi;
+                        - mp4;
+                        - mov;
+                    </p>
                 </div>
-
             </div>
-        </div>*@
 
-    <table>
-        <tr>
-            <td><input type="file" id="file" /></td>
-        </tr>
+            <form action="/Home/Converter" method="post">
+                <div id="files" class="file-collection">
+                    <progress class="file-progress" id="fileProgress"></progress>
 
-        <tr>
-            <td><input type="button" id="btnUpload" value="Upload"></td>
-        </tr>
+                    <div class="file">
+                        <label  class="file-label">FileName.............</label>
+                        <button class="file-button">Remove</button>
+                    </div>
+                </div>
 
-        <tr>
-            <td colspan="2"><progress id="fileProgress" style="display: none"></progress></td>
-        </tr>
-    </table>
-
-    <span id="lblMessage"></span>
+                <div id="settings" class="settings-container">
+                    <div class="settings">
+                        <label>Resolution: </label>
+                        <select name="resolution" class="resolution-select">
+                            <option>original</option>
+                            <option>1920x1080</option>
+                            <option>1280x720</option>
+                            <option>854x480</option>
+                            <option>640x360</option>
+                        </select>
+                        <label>Format: </label>
+                        <select name="format" class="format-select">
+                            <option>avi</option>
+                            <option>mp4</option>
+                            <option>mov</option>
+                        </select>
+                    </div>
+                    <button class="convert-button" id="convert">Convert</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.filedrop.js"></script>
 
     <script>
+        var fileArray = [];
 
-        $('body').on("click", "#btnUpload", function () {
-            var formData = new FormData();
-            formData.append("file", $('#file')[0].files[0]);
-
-            $.ajax({
-                url: "/Home/UploadFile",
-                type: 'Post',
-                data: formData,
-                cache: false,
-                contentType: false,
-                processData: false,
-                success: function (fileName) {
-                    $('#fileProgress').hide();
-                    //$('#lblMessage').html("<b>" + fileName + "</b> has been uploaded.");
-                    var url = '@Url.Action("Converter", "Home", new { fileName = "__fileName__" })';
-                    window.location.href = url.replace("__fileName__", fileName);
-                },
-                xhr: function () {
-                    var filexhr = $.ajaxSettings.xhr();
-                    if (filexhr.upload) {
-                        $("progress").show();
-                        filexhr.upload.addEventListener("progress", function (e) {
-                            if (e.lengthComputable) {
-                                $('#fileProgress').attr({
-                                    value: e.loaded,
-                                    max: e.total
-                                });
-                            }
-                        }, false);
-                    }
-                    return filexhr;
-                }
-            });
+        $("body").on('drag dragstart dragend dragover dragenter dragleave drop', function () {
+            return false;
         });
 
+        var dropZone = $('.upload-zone');
+        $("progress").hide();
+        dropZone.on('drag dragstart dragend dragover dragenter dragleave drop', function () {
+            return false;
+        });
+
+        dropZone.on('drop', function (e) {
+            let file = e.originalEvent.dataTransfer.files;
+            SendFiles(file);
+        });
+
+        $('#file-input').change(function () {
+            let files = this.files;
+            SendFiles(files);
+        });
+
+        function RemoveFile(obj) {
+   
+            var fileName = obj.value;
+            var index = fileArray.indexOf(fileName);
+            fileArray.splice(index);
+
+            $(obj).parent().remove();
+        }
+
+        function SendFiles(files) {
+            var formData = new FormData();
+
+            for (var i = 0; i < files.length; i++) {
+                formData.set("file", files[i]);
+                fileArray.push(files[i].name);
+                $.ajax({
+                    url: "/Home/UploadFile",
+                    type: 'Post',
+                    data: formData,
+                    cache: false,
+                    contentType: false,
+                    processData: false,
+                    success: function (fileName) {
+                        $("progress").hide();
+                        var fileObj = '<div class="file"><label class="file-label">' + fileName + '</label>';
+                        fileObj += '<input type="hidden" name="file" value="' + fileName + '"></input>'
+                        fileObj += '<button class="file-button" value="' + fileName + '" onclick="RemoveFile(this)">remove</button></div>';
+
+                        $("#files").append(fileObj);
+                    },
+                    xhr: function () {
+                        var filexhr = $.ajaxSettings.xhr();
+                        if (filexhr.upload) {
+                            $("progress").show();
+                            filexhr.upload.addEventListener("progress", function (e) {
+                                if (e.lengthComputable) {
+                                    $('#fileProgress').attr({
+                                        value: e.loaded,
+                                        max: e.total
+                                    });
+                                }
+                            }, false);
+                        }
+                        return filexhr;
+                    }
+                });
+            }
+        }
     </script>
 </body>
